SpiderData/cnblogs/Clean/07508.txt

一、python版本问题报错显示

java.lang.Exception: File "/home/hundsun/workspace/dap/tools/bdata-datago/DataX/bin/datax.py", line 114
    print readerRef
                  ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(readerRef)?
Exception in thread "main" java.lang.RuntimeException: Command Execute Error: python /home/XXX/DataX/bin/datax.py /home/xxx/20200715/20200706000000_958ff6f8df0f4086af10089f3e647177.datax


二、解决方法

由于python版本错误导致，使用python2.7.5后，问题解决

